--- a/index.html
+++ b/index.html
@@ -2,11 +2,40 @@
 <html>
   <head>
     <title>Autos</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/png" href="img/round.png"/>
-
+	  
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+      
+      video {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: -1;
+      }
+      
+      p {
+        font-size: 15px;
+        text-align: justify;
+        font-weight: bold;
+        font-family: sans-serif;
+        color: white;
+        padding: 20px;
+      }
+    </style>
+	  
   </head>
   <body>
+    <video autoplay loop muted>
+      <source src="https://media0.giphy.com/media/0HR6cjY8Q1XQlmjVVa/giphy360p.mp4" type="video/mp4">
+    </video>
+ 
 
 <p>Y era un domingo la tarde
 Fui a los coches de choque
